--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="/styles/imgs/altLogo.png" alt="" class="logo">
             <p>Insurance Co.</p>
         </section> -->
-        <section class="Navigation__Menu">
+        <div class="Navigation__Menu">
             <nav>
                 <ul>
                     <li><a href="#">Meet Our Team</a></li>
@@ -31,15 +31,15 @@
                     <li><a href="/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
 
-        <section class="hero__section">
+        <div class="hero__section">
             <img src="https://images.unsplash.com/photo-1532329683184-6ffd13057d1c?q=80&w=1775&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Smiling Old Couple Walking in Yellow Flowers" class="hero__image">
             <div class="hero__overlay">
                 <p class="big__header">Longevity</p>
                 <p class="small__subheader">What matters to you?</p>
             </div>
-        </section>
+        </div>
 
     </header>
     
@@ -49,36 +49,36 @@
             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, perspiciatis.</q>
         </blockquote>
 
-        <section class="mainContent__section">
+        <div class="mainContent__section">
             <img src="https://images.unsplash.com/photo-1658314756410-bc606c1d9306?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Lady smiling making coffee" class="content_image">
             <div class="content_section">
                 <h2>Medicare Basic</h2>
                 <p class="basic__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
-                <button class="contact__btn">Contact</button>
+                <button class="contact__btn"><a href="/joinOurTeam.html">Contact</a></button>
             </div>
-        </section>
+        </div>
 
-        <section class="mainContent__section">
+        <div class="mainContent__section">
             <div class="content_section">
                 <h2>Long Term Basic Care</h2>
                 <p class="basic__info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
-                <button class="contact__btn">Contact</button>
+                <button class="contact__btn"><a href="/joinOurTeam.html">Contact</a></button>
             </div>
             <img src="https://images.unsplash.com/photo-1534630103086-5b1c106f74e0?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Couple overlooking the lake holding hands" class="content_image">
-        </section>
+        </div>
 
-        <section class="mainContent__section">
+        <div class="mainContent__section">
             <img src="https://images.unsplash.com/photo-1605812830455-2fadc55bc4ba?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Father Holding child on his neck" class="content_image">
             <div class="content_section">
                 <h2>Life Policy</h2>
                 <p class="basic__info3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
-                <button class="contact__btn">Contact</button>
+                <button class="contact__btn"><a href="/joinOurTeam.html">Contact</a></button>
             </div>
-        </section>
+        </div>
 
         <h3 class="review__title">Our Committment To Our Customers</h3>
 
-        <section class="reviews__section">
+        <div class="reviews__section">
 
             <!-- <div class="cards__section wrapper"> -->
 
@@ -345,13 +345,13 @@
                     <p class="date">September 9, 2023</p>
                 </div>
 
-        </section>
+        </div>
     </main>
 
     <footer>
-       <section class="footer__wrapper wrapper">
+       <div class="footer__wrapper wrapper">
 
-            <section class="footer__links__wrapper">
+            <div class="footer__links__wrapper">
                 <div class="footer__links">
                     <h3>Company</h3>
                     <ul class="list__items">
@@ -372,9 +372,9 @@
                         <li><a href="#">ZOE Healthy Study</a></li>
                     </ul>
                 </div>
-            </section>
+              </div>
 
-            <section class="SocialMedia__icons">
+            <div class="SocialMedia__icons">
                 
                 <a href="#"><svg class="facebook icons" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title/><g data-name="facebook fb face book" id="facebook_fb_face_book"><path d="M24,3H8A5,5,0,0,0,3,8V24a5,5,0,0,0,5,5h8a1,1,0,0,0,1-1V20a1,1,0,0,0-1-1H15V17h1a1,1,0,0,0,1-1V12.5A2.5,2.5,0,0,1,19.5,10H22v2H21a2,2,0,0,0-2,2v2a1,1,0,0,0,1,1h1.72l-.5,2H20a1,1,0,0,0-1,1v4a1,1,0,0,0,2,0V21h1a1,1,0,0,0,1-.76l1-4a1,1,0,0,0-.18-.86A1,1,0,0,0,23,15H21V14h2a1,1,0,0,0,1-1V9a1,1,0,0,0-1-1H19.5A4.51,4.51,0,0,0,15,12.5V15H14a1,1,0,0,0-1,1v4a1,1,0,0,0,1,1h1v6H8a3,3,0,0,1-3-3V8A3,3,0,0,1,8,5H24a3,3,0,0,1,3,3V24a3,3,0,0,1-3,3H20a1,1,0,0,0,0,2h4a5,5,0,0,0,5-5V8A5,5,0,0,0,24,3Z"/></g></svg></a>
 
@@ -383,8 +383,8 @@
                 <a href="#"><svg class="twitter icons" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:#010101;}</style></defs><title/><g id="Twitter"><path class="cls-1" d="M11.68,27.42a17.88,17.88,0,0,1-9.25-2.75A1,1,0,0,1,3.57,23C4,23.29,13,29.4,21.25,21.18,25,16.49,25,14.72,25,10.85a1,1,0,0,1,.82-1l-.27-.12A1,1,0,0,1,25,8.85a1,1,0,0,1,.55-.9l.2-.11c-.64,0-1.12,0-1.46-.28a6.19,6.19,0,0,0-5.08-.7c-1.47.63-2.21,2.31-2.21,5a1,1,0,0,1-1,1A15.94,15.94,0,0,1,5.45,8.64,4.27,4.27,0,0,0,7.55,13,1,1,0,0,1,7,14.85a5.18,5.18,0,0,1-1.36-.25A7.8,7.8,0,0,0,8.45,17,1,1,0,0,1,9,18.08a1,1,0,0,1-1,.77H7.52a4,4,0,0,0,3.48,2,1,1,0,0,1,1,1c0,1.47-1.62,2-3,2a1,1,0,0,1-1-1,1,1,0,0,1,.24-.65A6.69,6.69,0,0,1,5,18.09a1,1,0,0,1,.18-.86l0-.06A6.09,6.09,0,0,1,3,12.85,1,1,0,0,1,3.47,12,1,1,0,0,1,4,11.85,6.33,6.33,0,0,1,4.11,6.4a1,1,0,0,1,.73-.54,1,1,0,0,1,.87.28A14.73,14.73,0,0,0,15,10.81C15.31,7.1,17,5.6,18.48,5c2.49-1,5.61,0,6.86.86.87,0,2.33-.09,2.95-.71a1,1,0,0,1,1.6,1.16,7.27,7.27,0,0,1-1.07,1.56A1,1,0,0,1,29.89,9.3,4.51,4.51,0,0,1,27,11.69c0,3.59-.3,5.88-4.22,10.78l-.07.09A15.28,15.28,0,0,1,11.68,27.42Z"/></g></svg></a>
 
                 <a href="#"><svg class="mail icons" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title/><g data-name="mail email e-mail letter" id="mail_email_e-mail_letter"><path d="M28,13a1,1,0,0,0-1,1v8a1,1,0,0,1-1,1H6a1,1,0,0,1-1-1V14a1,1,0,0,0-2,0v8a3,3,0,0,0,.88,2.12A3,3,0,0,0,6,25H26a3,3,0,0,0,2.12-.88A3,3,0,0,0,29,22V14A1,1,0,0,0,28,13Z"/><path d="M15.4,18.8a1,1,0,0,0,1.2,0L28.41,9.94a1,1,0,0,0,.3-1.23,3.06,3.06,0,0,0-.59-.83A3,3,0,0,0,26,7H6a3,3,0,0,0-2.12.88,3.06,3.06,0,0,0-.59.83,1,1,0,0,0,.3,1.23ZM6,9H26a.9.9,0,0,1,.28,0L16,16.75,5.72,9A.9.9,0,0,1,6,9Z"/></g></svg></a>
-            </section>
-       </section>
+            </div>
+          </div>
 
        <hr class="wrapper">
 
