--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <main>
-        <h1>The Team</h1>
+        <h1 class="title">The Team</h1>
         <div class="team__wrapper">
 
 
@@ -38,7 +38,7 @@
             <div class="team_members">
                 <div class="team_member_roles">
                     <h3>Tiffany Lu</h3>
-                    <h4>Administrator</h4>
+                    <h4>IT Technician</h4>
 
                     <img src="https://images.unsplash.com/photo-1568822617270-2c1579f8dfe2?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTE4fHxhdmF0YXJzfGVufDB8fDB8fHww" alt="" class="team_member_img">
                 </div>
@@ -55,37 +55,37 @@
 
             <div class="team_members">
                 <div class="team_member_roles">
-                    <h3></h3>
-                    <h4></h4>
+                    <h3>Linda McMann</h3>
+                    <h4>Public Realations</h4>
 
-                    <img src="" alt="" class="team_member_img">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8YXZhdGFyc3xlbnwwfHwwfHx8MA%3D%3D" alt="" class="team_member_img">
                 </div>
             </div>
 
             <div class="team_members">
                 <div class="team_member_roles">
-                    <h3></h3>
-                    <h4></h4>
+                    <h3>Clair Bigsby</h3>
+                    <h4>Human Resources</h4>
 
-                    <img src="" alt="" class="team_member_img">
+                    <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGF2YXRhcnN8ZW58MHx8MHx8fDA%3D" alt="" class="team_member_img">
                 </div>
             </div>
 
             <div class="team_members">
                 <div class="team_member_roles">
-                    <h3></h3>
-                    <h4></h4>
+                    <h3>Thomas Williams</h3>
+                    <h4>Lead Consultant</h4>
 
-                    <img src="" alt="" class="team_member_img">
+                    <img src="https://images.unsplash.com/photo-1566492031773-4f4e44671857?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDh8fGF2YXRhcnN8ZW58MHx8MHx8fDA%3D" alt="" class="team_member_img">
                 </div>
             </div>
 
             <div class="team_members">
                 <div class="team_member_roles">
-                    <h3></h3>
-                    <h4></h4>
+                    <h3>Vanessa De La Cruz</h3>
+                    <h4>Head of Operations</h4>
 
-                    <img src="" alt="" class="team_member_img">
+                    <img src="https://images.unsplash.com/photo-1645378999013-95abebf5f3c1?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODB8fGF2YXRhcnN8ZW58MHx8MHx8fDA%3D" alt="" class="team_member_img">
                 </div>
             </div>
             
