working on the main page of the project.

--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -12,6 +12,7 @@
     <title>Meet The Team</title>
 </head>
 <body>
+    <header></header>
     <main>
         <h1 class="title">The Team</h1>
         <div class="team__wrapper">
