working on the main page of the project.

--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -12,7 +12,21 @@
     <title>Meet The Team</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="Navigation__Menu">
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="#">Medicare</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Links</a></li>
+                    <li><a href="#">Senior FAQs</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
         <h1 class="title">The Team</h1>
         <div class="team__wrapper">
