working on the main page of the project.

--- a/joinOurTeam.html
+++ b/joinOurTeam.html
@@ -9,6 +9,19 @@
     <title>Mock Up Insurance</title>
 </head>
 <body>
+    <header>
+        <div class="Navigation__Menu">
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/meetTheTeam.html">Meet Our Team</a></li>
+                    <li><a href="/event.html">Events</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
         <!-- <div>
             <img src="https://images.unsplash.com/photo-1688538586051-e285d3b3d7d6?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="login__img">
