--- a/meetTheTeam.html
+++ b/meetTheTeam.html
@@ -17,10 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="#">Medicare</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Links</a></li>
-                    <li><a href="#">Senior FAQs</a></li>
+                    <li><a href="/event.html">Events</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
