working on the main page of the project.

--- a/pages/meetTheTeam.html
+++ b/pages/meetTheTeam.html
@@ -17,9 +17,9 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/event.html">Events</a></li>
+                    <li><a href="../pages/event.html">Events</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
+                    <li><a href="../pages/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
         </div>
