--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="Navigation__Menu">
             <nav>
                 <ul>
-                    <li><a href="/meetTheTeam.html">Meet Our Team</a></li>
-                    <li><a href="/event.html">Events</a></li>
+                    <li><a href="/pages/meetTheTeam.html">Meet Our Team</a></li>
+                    <li><a href="/pages/event.html">Events</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
+                    <li><a href="/pages/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
         </div>
