--- a/pages/event.html
+++ b/pages/event.html
@@ -22,9 +22,9 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/meetTheTeam.html">Meet Our Team</a></li>
+                    <li><a href="../pages/meetTheTeam.html">Meet Our Team</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
+                    <li><a href="../pages/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
         </div>
