--- a/pages/joinOurTeam.html
+++ b/pages/joinOurTeam.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/joinOurTeam.css">
+    <link rel="stylesheet" href="/styles/joinOurTeam.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <title>Mock Up Insurance</title>
 </head>
@@ -14,10 +14,10 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/meetTheTeam.html">Meet Our Team</a></li>
-                    <li><a href="/event.html">Events</a></li>
+                    <li><a href="../pages/meetTheTeam.html">Meet Our Team</a></li>
+                    <li><a href="../pages/event.html">Events</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="/joinOurTeam.html">Join Our Team</a></li>
+                    <li><a href="#">Join Our Team</a></li>
                 </ul>
             </nav>
         </div>
