working on sign up page.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="/pages/meetTheTeam.html">Meet Our Team</a></li>
                     <li><a href="/pages/event.html">Events</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/pages/signUp.html">Sign Up</a></li>
                     <li><a href="/pages/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
