--- a/pages/event.html
+++ b/pages/event.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!--- <link rel="stylesheet" href="/styles/styles.css">-->
-    <link rel="stylesheet" href="/styles/event_styles.css">
+    <link rel="stylesheet" href="../styles/event_styles.css">
     <link rel="icon" href="/styles/imgs/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="../pages/meetTheTeam.html">Meet Our Team</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../pages/signUp.html">Sign Up</a></li>
                     <li><a href="../pages/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
