working on sign up page.

--- a/pages/meetTheTeam.html
+++ b/pages/meetTheTeam.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="../pages/event.html">Events</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../pages/signUp.html">Sign Up</a></li>
                     <li><a href="../pages/joinOurTeam.html">Join Our Team</a></li>
                 </ul>
             </nav>
